--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Sandal Throw Game</title>
-    <script src="node_modules/phaser/dist/phaser.js"></script>
+   <script src="assets/phaser.min.js"></script>
     <script src="main.js"></script>
 </head>
 <body>
