--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <title>Sandal Throw Game</title>
-   <script src="assets/phaser.min.js"></script>
+    <script src="assets/phaser.min.js"></script>
     <script src="main.js"></script>
 </head>
 <body>
+    <button id="startAudio">Start Game</button> <!-- Button to start audio -->
 </body>
 </html>
